--- a/requirements_lora.txt
+++ b/requirements_lora.txt
@@ -1,2 +1,9 @@
-peft
+transformers>=4.35.0
+peft>=0.6.0
+datasets>=2.14.0
+accelerate>=0.24.0
+torch>=2.0.0
+bitsandbytes>=0.41.0
+pandas>=1.5.0
+numpy>=1.24.0
 
